crates/squawk_parser/tests/snapshots/tests__alter_role_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_role.sql
---
SOURCE_FILE
  COMMENT "-- with_options"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    ROLE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      ROLE_OPTION_GENERIC
        IDENT "superuser"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- all_options"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE "\n  "
    ROLE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      ROLE_OPTION_GENERIC
        IDENT "superuser"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nosuperuser"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nosuperuser"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "createdb"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nocreatedb"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "createrole"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nocreaterole"
      WHITESPACE "\n  "
      ROLE_OPTION_INHERIT
        INHERIT_KW "inherit"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "noinherit"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "login"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nologin"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "replication"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "noreplication"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "bypassrls"
      WHITESPACE "\n  "
      ROLE_OPTION_GENERIC
        IDENT "nobypassrls"
      WHITESPACE "\n  "
      ROLE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "100"
      WHITESPACE "\n  "
      ROLE_OPTION_ENCRYPTED_PASSWORD
        ENCRYPTED_KW "encrypted"
        WHITESPACE " "
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "'foo'"
      WHITESPACE "\n  "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "'bar'"
      WHITESPACE " "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        NULL_KW "null"
      WHITESPACE "\n  "
      ROLE_OPTION_VALID_UNTIL
        VALID_KW "valid"
        WHITESPACE " "
        UNTIL_KW "until"
        WHITESPACE " "
        LITERAL
          STRING "'2042-02-22'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    ROLE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE
        IDENT "newname"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    ROLE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE
        CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_config"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        DEFAULT_KW "default"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_config_from_current"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
      WHITESPACE " "
      FROM_CURRENT
        FROM_KW "from"
        WHITESPACE " "
        CURRENT_KW "current"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_config"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_all"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- in_database"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "r"
    WHITESPACE " "
    IN_DATABASE
      IN_KW "in"
      WHITESPACE " "
      DATABASE_KW "database"
      WHITESPACE " "
      DATABASE_REF
        IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "param"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'value'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- using_current_user"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_REF_CURRENT_USER
        CURRENT_USER_KW "current_user"
    WHITESPACE " "
    ROLE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      ROLE_OPTION_GENERIC
        IDENT "nologin"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- for_all_roles"
  WHITESPACE "\n"
  ALTER_ROLE
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
