crates/squawk_parser/tests/snapshots/tests__alter_rule_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_rule.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_RULE
    ALTER_KW "alter"
    WHITESPACE " "
    RULE_KW "rule"
    WHITESPACE " "
    RULE_REF
      IDENT "r"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    RULE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      RULE
        IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_schema"
  WHITESPACE "\n"
  ALTER_RULE
    ALTER_KW "alter"
    WHITESPACE " "
    RULE_KW "rule"
    WHITESPACE " "
    RULE_REF
      IDENT "r"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              SCHEMA_KW "schema"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    RULE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      RULE
        IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
