crates/squawk_parser/tests/snapshots/tests__alter_schema_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_schema.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_SCHEMA
    ALTER_KW "alter"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    SCHEMA_REF
      IDENT "s"
    WHITESPACE " "
    SCHEMA_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      SCHEMA
        IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_SCHEMA
    ALTER_KW "alter"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    SCHEMA_REF
      IDENT "s"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SCHEMA
    ALTER_KW "alter"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    SCHEMA_REF
      IDENT "s"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
