crates/squawk_parser/tests/snapshots/tests__alter_sequence_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/alter_sequence.sql
---
SOURCE_FILE
  COMMENT "-- missing option"
  WHITESPACE "\n"
  ALTER_SEQUENCE
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected ALTER SEQUENCE option
  ╭▸ 
2 │ alter sequence s;
  ╰╴                ━
