crates/squawk_parser/tests/snapshots/tests__alter_server_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/alter_server.sql
---
SOURCE_FILE
  COMMENT "-- missing option"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      NAME_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected ALTER SERVER option
  ╭▸ 
2 │ alter server s;
  ╰╴              ━
