crates/squawk_parser/tests/snapshots/tests__alter_server_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_server.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    WHITESPACE "\n  "
    SERVER_VERSION
      VERSION_KW "version"
      WHITESPACE " "
      LITERAL
        STRING "'v1'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    WHITESPACE "\n  "
    SERVER_VERSION
      VERSION_KW "version"
      WHITESPACE " "
      LITERAL
        STRING "'v1'"
    WHITESPACE "\n  "
    ALTER_OPTION_LIST
      OPTIONS_KW "options"
      WHITESPACE " "
      L_PAREN "("
      ADD_FOREIGN_OPTION
        ADD_KW "add"
        WHITESPACE " "
        FOREIGN_OPTION_NAME
          IDENT "o"
        WHITESPACE " "
        LITERAL
          STRING "'val'"
      COMMA ","
      WHITESPACE " "
      DROP_FOREIGN_OPTION
        DROP_KW "drop"
        WHITESPACE " "
        FOREIGN_OPTION_NAME
          IDENT "p"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    WHITESPACE "\n  "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    WHITESPACE "\n  "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_SERVER
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    WHITESPACE "\n  "
    SERVER_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      SERVER
        IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
