crates/squawk_parser/tests/snapshots/tests__alter_statistics_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_statistics.sql
---
SOURCE_FILE
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    STATISTICS_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      STATISTICS
        PATH
          PATH_SEGMENT
            IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- statistics_value"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    SET_STATISTICS
      SET_KW "set"
      WHITESPACE " "
      STATISTICS_KW "statistics"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "100"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_STATISTICS
    ALTER_KW "alter"
    WHITESPACE " "
    STATISTICS_KW "statistics"
    WHITESPACE " "
    STATISTICS_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    SET_STATISTICS
      SET_KW "set"
      WHITESPACE " "
      STATISTICS_KW "statistics"
      WHITESPACE " "
      DEFAULT_KW "default"
    SEMICOLON ";"
  WHITESPACE "\n\n"
